--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+div.header
+{
+	padding: 20px;
+	min-width: 300px;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
 #map 
 {
 	height: 400px;
