--- a/style.css
+++ b/style.css
@@ -1,8 +1,22 @@
 div.header
 {
+	color: white;
+	background-color: black;
 	padding: 20px;
 	min-width: 300px;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.nav > li > a 
+{ 
+	/*
+	margin-bottom: 10px;
+	margin-top: 20px;
+	padding: 0px;
+	*/
+
+	color: white; 
+	font-size: 30px;
 }
 
 #map 
